# Aiwnios

./: .clang-format  .gitattributes  .gitignore  ACDictGen.HC  ACFill.HC  ACInit.HC  ACTask.HC  ADbg.HC  AIWNIOS_CodeGen.HC  AIWNIOS_PrsExp.HC  AMath.HC  AMathODE.HC  ARegistry.HC  ASnd.HC  AsmLib.HC  AsmResolve.HC  CExcept.HC  CExts.HC  CInit.HC  CMain.HC  CMakeLists.txt  CMisc.HC  CQue.HC  CastleFrankenstein.HC  Compiler.HC  CompilerA.HH  Compress.HC  CtrlsA.HC  DEVMAN.MD  DetectArch.cmake  DocCodeTools.HC  DocEd.HC  DocExt.HC  DocFile.HC  DocFind.HC  DocGet.HC  DocGr.HC  DocHighlight.HC  DocInit.HC  DocLink.HC  (+142 more)
AfterEgypt/: AESplash.DD.Z  AfterEgypt.HC  Camp.HC  Clouds.HC  GodTalking.HC  HorebA.HC  HorebBMP.HC  HorebBSP.HC  HorebC.HC  Load.HC  Mountain.HC  Run.HC
AfterEgypt/Comics/: Moses01.DD.Z  Moses02.DD.Z  Moses04.DD.Z  Moses05.DD.Z  Moses06.DD.Z  Moses07.DD.Z  Moses08.DD.Z
AiwniosHelp/: Main.DD  Part10_SethJobs.DD  Part11_DolDoc.DD  Part1_Graphics.DD  Part2_Sound.DD  Part3_Reflection.DD  Part4_FileSystem.DD  Part5_CQue.DD  Part6_CHashTable.DD  Part7_Fifo.DD  Part8_Input.DD  Part9_MultThreading.DD
Apps/Budget/: BgtMain.HC
Apps/GrModels/: BallGen.HC  ManGen.HC  Run.HC
Apps/KeepAway/: KeepAway.HC
Apps/Logic/: Logic.HC  Run.HC
Apps/Psalmody/: JukeBox.HC  PsalmodyMain.HC
Apps/Psalmody/Examples/: abyss.HC  advantage.HC  battlehymnsolo.HC  bedewed.HC  beseech.HC  cosam.HC  downfall.HC  first.HC  fishermen.HC  garfield.HC  good.HC  image.HC  medians.HC  molded.HC  owes.HC  personal.HC  provisions.HC  purpose.HC  risen.HC  satisfaction.HC  sixth.HC  spokest.HC  threeships.HC  tormenting.HC  villa.HC  wine.HC
Apps/Span/: SpanMain.HC
Apps/TimeClock/: TimeClk.HC
Apps/Titanium/: Titanium.HC
Apps/ToTheFront/: Load.HC  Run.HC  TTFDraw.HC  TTFFire.HC  TTFGlbls.HC  TTFMove.HC  ToTheFront.HC
Apps/X-Caliber/: Run.HC  X-Caliber.HC
Community/CPM/: ANSI.HC  Z802.HC
Community/CPM/A/0/: ASS.C  DIR.1  POOP.C
Community/HolyIRC/: Client.HC
Community/HolyIRC/CrossNetShims/: Aiwnios2.HC  EXODUS.HC  Generic.HC
Community/HolyIRC/CrossNetShims/Shrine/: Arp.HC.Z  Dns.HC.Z  Ethernet.HC.Z  Http.HC.Z  IPv4.HC.Z  Icmp.HC.Z  MakeSnailNet.HC.Z  NativeSocket.HC.Z  NetFifo.HC.Z  NetHandlerTask.HC.Z  Netcfg.HC.Z  SnailLib.HC.Z  Socket.HC.Z  Tcp.HC.Z  Udp.HC.Z  Url.HC.Z  UrlParse.HC.Z
Community/TOOM/: MainDrawer.HC
Community/TempleCraft/: README.md  TempleCraft.HC
Community/blazeitfgt/: Bullet.HC  Collision.HC  TitleInput.HC  Turret.HC  zRun.HC
Demo/: Directives.HC  Progress.HC
Demo/DolDoc/: DemoDoc.DD  Form.HC
Demo/Games/: BattleLines.HC  BomberGolf.HC  CastleFrankenstein.HC  FlapBat.HC  FlatTops.HC  Maze.HC  RawHide.HC  Talons.HC  Varoom.HC  Wenceslas.HC
Doc/: Asm.DD  CompilerOverview.DD  DolDocOverview.DD  GuideLines.DD  HelpIndex.DD  SpriteEd.DD  Start.DD
DolNet/: FileBMP.HC  ToHtml.HC  gen_html.HC  http.HC  run.HC
DolNet/HolyCGI/: AiwnTubeCommon.HC  VideoAdmin.HC  VideoComment.HC  VideoSearch.HC  VideoUpload.HC  ViewVideo.HC
HolyIRC/: Client.HC
HolyIRC/CrossNetShims/: Aiwnios2.HC  EXODUS.HC  Generic.HC
HolyIRC/CrossNetShims/Shrine/: Dhcp.HC.Z  Ethernet.HC.Z  Http.HC.Z  IPv4.HC.Z
Hymns/: adopted.HC  age.HC  blinded.HC  compassions.HC  completed.HC  conception.HC  dialogue.HC  doing.HC  dream.HC  exalt.HC  exiled.HC  exodus.HC  expedition.HC  fairness.HC  fixing.HC  flung.HC  gates.HC  gutenberg.HC  internal.HC  josh.HC  keeping.HC  mightest.HC  mildly.HC  passions.HC  permitted.HC  psalm.HC  readier.HC  rush.HC  savour.HC  slug.HC  small.HC  strategist.HC  thither.HC  tookest.HC  verses.HC  whos.HC
Src/: AArch64_ops.csv  ACInit.HC  ACTask.HC  ADbg.HC  ADskA.HC  AIWNIOS_CodeGen.HC  AIWNIOS_PrsExp.HC  AMath.HC  AMathODE.HC  ARegistry.HC  ASnd.HC  AiwniosPack.HC  ArmImmTab.HC  AsmARM64.HC  AsmLib.HC  AsmRISCV.HC  AsmX64.HC  CExcept.HC  CExts.HC  CHash.HC  CInit.HC  CMain.HC  Compiler.HC  CompilerA.HH  CompilerB.HH  CtrlsA.HC  CtrlsBttn.HC  Diff.HC  Display.HC  DocBin.HC  DocChar.HC  DocClipBoard.HC  DocCodeTools.HC  DocEd.HC  DocFile.HC  DocFind.HC  DocForm.HC  DocGr.HC  DocMacro.HC  DocNew.HC  (+103 more)
X-Caliber/: XCCtrls.HC
asm/: CMakeLists.txt  exceptAARCH64.s  ffi_call_tos.s  ffi_call_tos_RISCV.s  ffi_call_tos_WIN.s  ffi_call_tos_aarch64.s  miscAARCH64.s  miscRISCV.s  miscTOSX86.s  miscTOSaarch64.s  miscWIN.s  miscX86.s  swapctxAARCH64.s  swapctxRISCV.s
c/: CMakeLists.txt  aiwn.h  aiwn_arm.h  aiwn_asm.h  aiwn_bytecode.h  aiwn_except.h  aiwn_fs.h  aiwn_hash.h  aiwn_lexparser.h  aiwn_logo.h  aiwn_mem.h  aiwn_multic.h  aiwn_que.h  aiwn_riscv.h  aiwn_snd.h  aiwn_sock.h  aiwn_tui.h  aiwn_windows.h  arm64_asm.c  arm_backend.c  bungis.c  cque.c  dbg.c  except.c  ffi_gen.c  fs.c  hash.c  lex.c  loader.c  logo.c  lzw.c  lzw.h  main.c  mem.c  misc.c  multic.c  optpass.c  parser.c  riscv_asm.c  riscv_backend.c  (+9 more)
cli_vendor/: ConvertUTF.h  linenoise.h
cmake/: DetectArch.cmake
misc/: CMakeLists.txt  Info.plist  aiwnios.desktop.in
